@@ -172,8 +172,8 @@ module RubyInstaller
     )
 
     OpenSsl = OpenStruct.new(
-      :url => 'http://mirrors.ibiblio.org/pub/mirrors/openssl/source',
-      :version => '1.0.0h',
+      :url => 'http://openssl.org/source/',
+      :version => '1.0.0i',
       :target => 'sandbox/src-openssl',
       :install_target => 'sandbox/openssl',
       :patches => 'resources/patches/openssl',
@@ -186,7 +186,7 @@ module RubyInstaller
         :libssl => 'ssleay32-1.0.0-msvcrt.dll',
       },
       :files => [
-        'openssl-1.0.0h.tar.gz',
+        'openssl-1.0.0i.tar.gz',
       ]
     )
 
