@@ -1,6 +1,7 @@
 === (in git)
 
 * Enhancements:
+  * Upgraded OpenSSL to version 1.0.0i
   * Upgraded libffi to version 3.0.11
 
 === 2012-04-21
